--- a/yueshipin/res/layout/weixin_sharevideo.xml
+++ b/yueshipin/res/layout/weixin_sharevideo.xml
@@ -52,6 +52,37 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/top_icon_return" />
         </LinearLayout>
+             <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_weight="3"
+            android:gravity="center"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:gravity="center"
+                android:singleLine="true"
+                android:text="悦视频"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:visibility="invisible"
+            android:orientation="horizontal"
+             >
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/top_icon_return" />
+        </LinearLayout>
     </LinearLayout>
 
     <ScrollView
