--- a/yueshipin/res/layout/weixin_share.xml
+++ b/yueshipin/res/layout/weixin_share.xml
@@ -16,8 +16,9 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:gravity="center"
+            android:layout_weight="1"
             android:onClick="OnClickTab1TopLeft"
-            android:paddingLeft="5dp" >
+            android:paddingLeft="6dp" >
 
             <ImageView
                 android:id="@+id/Tab1TopLeftImage"
@@ -82,14 +83,14 @@
 
             <requestFocus />
         </EditText>
-
+		
         <ImageButton
             android:id="@+id/Tab1TopRightImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/sousuo"
             android:onClick="OnClickSearch"
-            android:paddingRight="3dp" />
+            android:layout_marginLeft="6dp"/>
     </LinearLayout>
 
     <LinearLayout
@@ -97,7 +98,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="105dp"
         android:orientation="vertical" >
 
         <!--
