--- a/yueshipin/res/layout/weixin_sharevideo.xml
+++ b/yueshipin/res/layout/weixin_sharevideo.xml
@@ -43,8 +43,9 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:gravity="center"
+            android:layout_weight="1"
             android:onClick="OnClickTab1TopLeft"
-            android:paddingLeft="16dp" >
+            android:paddingLeft="6dp" >
 
             <ImageView
                 android:id="@+id/imageView1"
